--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -38,6 +38,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
@@ -65,15 +66,17 @@
                     Label="Wahoo" />
             </StackPanel>
 
+            <TextBox Grid.Row="1" KeyDown="SearchText_KeyDown" />
+
             <ComboBox
-                Grid.Row="1"
+                Grid.Row="2"
                 Width="210"
                 DisplayMemberPath="Name"
                 ItemsSource="{x:Bind Mode=OneTime, Path=cycloid:ViewModel.MapStyleAndColors}"
                 SelectedItem="{x:Bind Mode=TwoWay, Path=ViewModel.MapStyleAndColor}" />
 
             <StackPanel
-                Grid.Row="2"
+                Grid.Row="3"
                 HorizontalAlignment="Center"
                 Orientation="Horizontal"
                 Spacing="5">
@@ -104,7 +107,7 @@
             </StackPanel>
 
             <mux:TabView
-                Grid.Row="3"
+                Grid.Row="4"
                 Width="210"
                 IsAddTabButtonVisible="False"
                 TabWidthMode="Compact">
@@ -181,17 +184,15 @@
             </mux:TabView>
 
             <TextBlock
-                Grid.Row="4"
+                Grid.Row="5"
                 FontSize="11"
                 Text="{x:Bind Mode=OneWay, Path=ViewModel.Status}" />
 
         </Grid>
 
-        <Grid
-            Grid.Row="0"
-            Grid.Column="1">
+        <Grid Grid.Row="0" Grid.Column="1">
 
-            <controls:Map />
+            <controls:Map x:Name="Map" />
 
             <StackPanel
                 Margin="10"
