Info loading progress bar

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -94,13 +94,21 @@
                         <KeyboardAccelerator Key="P" Modifiers="Control" />
                     </ToggleButton.KeyboardAccelerators>
                 </ToggleButton>
-                <ToggleButton
-                    Content="{ui:SymbolIcon Symbol=OutlineStar}"
-                    IsEnabled="{x:Bind Mode=OneWay, Path=ViewModel.InfoEnabled}"
-                    IsChecked="{x:Bind Mode=TwoWay, Path=ViewModel.InfoShouldVisible}">
+                <ToggleButton IsChecked="{x:Bind Mode=TwoWay, Path=ViewModel.InfoShouldVisible}" IsEnabled="{x:Bind Mode=OneWay, Path=ViewModel.InfoEnabled}">
                     <ToggleButton.KeyboardAccelerators>
                         <KeyboardAccelerator Key="I" Modifiers="Control" />
                     </ToggleButton.KeyboardAccelerators>
+                    <ToggleButton.Content>
+                        <Grid>
+                            <SymbolIcon Symbol="OutlineStar" />
+                            <mux:ProgressBar
+                                Margin="-8,-6,-8,-6"
+                                VerticalAlignment="Bottom"
+                                Foreground="{ThemeResource AppBarToggleButtonForegroundChecked}"
+                                Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIf(ViewModel.InfoIsLoading)}"
+                                IsIndeterminate="True" />
+                        </Grid>
+                    </ToggleButton.Content>
                 </ToggleButton>
             </StackPanel>
 
