--- a/Controls/ProfileHoverPointValues.xaml
+++ b/Controls/ProfileHoverPointValues.xaml
@@ -1,5 +1,5 @@
 ﻿<controls:PointValuesControl
-    x:Class="cycloid.Controls.MapHoverPointValues"
+    x:Class="cycloid.Controls.ProfileHoverPointValues"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:cycloid.Controls"
